src/test/deca/context/invalid/return-invalidType.deca
class A {
    int invalidMethod(){
        float b = 3.78;
        return b;
    }
}